[package]
name = "node-process"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
node-sys = "0.4.2"
js-sys = "*"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "*"
workflow-log = "*"
workflow-wasm = { path = "../workflow-rs/workflow-wasm" }
workflow-core = { path = "../workflow-rs/workflow-core" }
thiserror = "1.0.38"
futures = "0.3.25"
