[package]
name = "node-child-process"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/aspectron/node-child-process"
authors = ["Anton Yemelyanov <anton.yemelyanov@gmail.com>", "Surinder Singh Matoo Mattaur <surinder83singh@gmail.com>"]
keywords = ["node","nodejs", "child", "process"]
categories = ["wasm","api-bindings"]
description = """
Node.js wasm_bindgen bindings for ChildProcess API
"""

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.60"
node-sys = "0.4.2"
wasm-bindgen = "0.2.83"
